--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,14 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-}
+    //Querydsl 추가
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+}
+// gradle 레벨에서 컴파일 할 대, 필욯ㄴ 클래스 파일 생성 <- By 어노테이션 프로세서
 tasks.named('test') {
     useJUnitPlatform()
 }
